crates/storage/tests/compile_fail/state_bare_string.rs
// Rejection: bare `String` as a state field — has no merge semantics.

use calimero_sdk::app;

#[app::state]
pub struct BadState {
    name: String,
}

fn main() {}
